# chainmaker-performance-test

./: .gitignore
chainmaker-performance-test/: NOTICE  README.md  go.mod  go.sum
chainmaker-performance-test/chainclient/: client.go
chainmaker-performance-test/config/: clients.yml  const_config.yml  sdk_config1.yml  sdk_config2.yml  sdk_config3.yml  sdk_config4.yml
chainmaker-performance-test/config_example/: bc1.yml  chainmaker.yml  clients_example.yml  const_config_example.yml  sdk_config_ca_example.yml  sdk_config_pk_example.yml  sdk_config_pwk_example.yml
chainmaker-performance-test/datahandler/: downLoadFile.go  get_data.go  updateConfigYml.go
chainmaker-performance-test/example/: chainmaker_performance_test.log.2025030220  chainmaker_performance_test.log.2025030222  chainmaker_performance_test.log.2025030223  chainmaker_performance_test.log.2025030300  chainmaker_performance_test.log.2025030321  chainmaker_performance_test.log.2025030322  main.go  sdk.log.2025030223  sdk.log.2025030300  sdk.log.2025030321  sdk.log.2025030322  test.go
chainmaker-performance-test/mock/: claim_mock.go  client_mock.go  query_mock.go  subservice_mock.go
chainmaker-performance-test/parallel/: Init.go  parallel_claim.go  parallel_query.go  parallel_test.go  process_log.go  process_pressure.go
contracts-rust/: .gitignore
contracts-rust/asset/: Cargo.toml  README.md
contracts-rust/asset/src/: asset.rs
contracts-rust/compute/: Cargo.toml
contracts-rust/compute/src/: compute.rs
contracts-rust/erc721/: Cargo.toml  README.md
contracts-rust/erc721/src/: erc721.rs
(+118 files in other folders)
