[package]
name = "asset"
version = "0.1.0"
authors = ["chainmaker"]
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
contract_sdk_rust = { git = "https://git.chainmaker.org.cn/ChainMaker/contract-sdk-rust.git", branch="master" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
